runtime/pavex_macros/tests/from/fail/missing_colon.rs
use pavex_macros::from;

mod a {}

fn main() {
    let _ = from![crate:a];
}
