runtime/pavex_macros/tests/from/fail/missing_colon.stderr
error: expected `,`
 --> tests/from/fail/missing_colon.rs:6:24
  |
6 |     let _ = from![crate:a];
  |                        ^
